# cap-benchmarks

./: .gitignore  CMakeLists.txt  benchmark.sh  build_cap.sh  charge_curve.cc  cyclic_voltammetry.cc  discharge_curve.cc  input_leakage_current.info  input_lissajous_curve.info  input_ragone_chart.info  input_verification_problem  leakage_current.cc  lissajous_curve.cc  ragone_chart.cc  run_benchmarks.py  run_docker.sh  super_capacitor.info  test_exact_transient_solution-2.cc  verification_problems.info
